Bug 324121 - Artistic colour selector doesn't update on fore/back-ground colour change.
Summary: Artistic colour selector doesn't update on fore/back-ground colour change.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-27 14:58 UTC by wolthera
Modified: 2013-09-28 13:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2013-08-27 14:58:25 UTC
Where the Advanced colour selector updates on colour-change, and sets its selection to be the same as the active colour, the Artistic colour selector only updates its background, but doesn't align the selection to be the same as the active colour. It's a little difficult to move through colourspace this way.

Reproducible: Always
Comment 1 Halla Rempt 2013-09-28 12:59:00 UTC
Git commit 93d7ce19f38e1cd4d9c4511a5d80f27655418072 by Boudewijn Rempt.
Committed on 28/09/2013 at 12:58.
Pushed by rempt into branch 'master'.

Artistic color selector: update selected color while moving around

M  +5    -5    krita/plugins/extensions/dockers/artisticcolorselector/kis_color_selector.cpp

http://commits.kde.org/calligra/93d7ce19f38e1cd4d9c4511a5d80f27655418072
Comment 2 Halla Rempt 2013-09-28 13:01:57 UTC
Git commit 370f6e1a5bb4fdd566a0a6d54976fb66077a5711 by Boudewijn Rempt.
Committed on 28/09/2013 at 13:01.
Pushed by rempt into branch 'master'.

Fix preferences dialog initializing color checks

M  +1    -1    krita/ui/dialogs/kis_dlg_preferences.cc

http://commits.kde.org/calligra/370f6e1a5bb4fdd566a0a6d54976fb66077a5711