Fix preferences dialog initializing color checks

BUG:324121